# Breeze11

./: CMakeLists.txt  README.md  breeze.h  breeze.json  breezebutton.cpp  breezedecoration.cpp  breezedecoration.h  breezesettingsdata.kcfg  breezesettingsprovider.cpp
config/: breezeconfigwidget.cpp  breezeexceptiondialog.cpp  breezelistmodel.h
libbreezecommon/: CMakeLists.txt  breezeboxshadowrenderer.cpp
